# Academy

./: .gitignore
FS/: CMakeLists.txt  FS.cpp  FS.h  main.cpp
InterfaceFactory/InterfaceFactory/: DynamicInterfaceFactory.h  StaticInterfaceFactory.h  main.cpp
ScopedCaller/: main.cpp
SmartPointers/: Block.cpp  Block.h  CMakeLists.txt  SharedBase.cpp  SharedBase.h  SharedPtr.cpp  SharedPtr.h  WeakPtr.cpp  WeakPtr.h  main.cpp
TaskList/: CMakeLists.txt
TaskList/src/: CMakeLists.txt
TaskList/src/gui/: CMakeLists.txt
TaskList/src/gui/include/: MainWindow.h
TaskList/src/gui/src/: MainWindow.cpp  TaskDialog.cpp  TaskDialog.h  delegate.cpp  delegate.h
TaskList/src/gui/ui/: MainWindow.ui  TaskDialog.qml  TaskForm.qml  TaskList.qml  main.qml  qml.qrc
TaskList/src/gui/ui_forms/: MainWindow.ui  TaskDialog.ui
TaskList/src/launcher/: CMakeLists.txt
TaskList/src/launcher/src/: main.cpp
TaskList/src/logic/: CMakeLists.txt
TaskList/src/logic/include/: Task.h  TaskList.h
TaskList/src/logic/src/: Task.cpp  TaskList.cpp
Templates/Function/Function/: Function.h  main.cpp
Templates/Matrix/: CMakeLists.txt  Matrix.h  main.cpp
Templates/Variant/: CMakeLists.txt  main.cpp
Templates/Vector/: CMakeLists.txt  main.cpp
ThreadPool/: main.cpp
